--- a/src/langs/ee.json
+++ b/src/langs/ee.json
@@ -1,3 +1,3 @@
 {
-  "lang_set_success_message": ":united_nations: Keel on kinnitatud eesti keelele"
+  "lang_set_success_message": ":flag_ee: Keel on kinnitatud eesti keelele"
 }
