--- a/src/langs/sp.json
+++ b/src/langs/sp.json
@@ -71,22 +71,22 @@
   "role_vote_results_ban1": ":x: ",
   "role_vote_results_ban2": " fue expulsado de la ciudad.",
   "role_peaceful_name": "Inocente",
-  "role_peaceful_description": "¡%Tu objetivo es salvar la ciudad de los criminales!\n:escalas: revela las identidades de los villanos y logra su expulsión de la ciudad.\n:trofeo: los inocentes ganan si no quedan asesinos en la ciudad. :exclamación: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
+  "role_peaceful_description": "%¡Tu objetivo es salvar la ciudad de los criminales!\n:scales:  revela las identidades de los villanos y logra su expulsión de la ciudad.\n:trophy:  los inocentes ganan si no quedan asesinos en la ciudad. :exclamation: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Selecciona tu víctima...",
-  "role_mafia_description": "%¡MATA Y SOBREVIVE!\n:skull_crossbones: cada noche, la mafia mata a un jugador por el que sus miembros dan más votos (en caso de empate, el jugador es elegido al azar). Pero recuerda: la víctima puede ser curado por el médico.\n:trofeo: La mafia gana si es al menos la mitad de todos los jugadores activos.% + ({r:maniac:count} > 0 ? % Excepción: si quedan dos jugadores, una mafia miembro y el maníaco — el maníaco gana.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: Your teammates: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%¡MATA Y SOBREVIVE!\n:skull_crossbones:  Cada noche, la mafia mata a un jugador por el que sus miembros dan más votos (en caso de empate, el jugador es elegido al azar). Pero recuerda: la víctima puede ser curado por el médico.\n:trophy:  La mafia gana si es al menos la mitad de todos los jugadores activos.% + ({r:maniac:count} > 0 ? % Excepción: si quedan dos jugadores, una mafia miembro y el maníaco — el maníaco gana.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette: Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maníaco",
   "role_killer_placeHolder": "Selecciona tu víctima...",
-  "role_killer_description": "¡%MATA A TODOS Y SOBREVIVE!\n:ax: Una vez cada dos noches matas a cualquier jugador que quieras. Pero recuerda: la víctima puede ser curada por el médico.\n:trofeo: Ganas si no más de un jugador además de ti permanece en la ciudad. ¡No perdones a nadie!%",
+  "role_killer_description": "%¡MATA A TODOS Y SOBREVIVE!\n:ax:  Una vez cada dos noches matas a cualquier jugador que quieras. Pero recuerda: la víctima puede ser curada por el médico.\n:trophy:  Ganas si no más de un jugador además de ti permanece en la ciudad. ¡No perdones a nadie!%",
   "role_doctor_name": "Médico",
   "role_doctor_placeHolder": "Selecciona a quién quieres curar...",
-  "role_doctor_description": "¡%Tú salvas la vida de las personas! :heart:\n:pill: Todas las noches curas a un jugador. Si este jugador es elegido por los criminales, él o ella seguirá con vida.\n:trofeo: Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamación: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
+  "role_doctor_description": "%¡Tú salvas la vida de las personas! :heart:\n:pill:  Todas las noches curas a un jugador. Si este jugador es elegido por los criminales, él o ella seguirá con vida.\n:trophy:  Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamation: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
   "role_police_name": "Detective",
   "role_police_placeHolder": "Selecciona a quién quieres revisar...",
-  "role_police_description": "¡%Tú investigas crímenes en la ciudad! :oncoming_police_car:\n:mag_right: Todas las noches revisas a un jugador y descubres si pertenece a la mafia.\n:trofeo: Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamación: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
+  "role_police_description": "%¡Tú investigas crímenes en la ciudad! :oncoming_police_car:\n:mag_right:  Todas las noches revisas a un jugador y descubres si pertenece a la mafia.\n:trophy:  Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamation: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
   "role_mistress_name": "Mujer elegante",
   "role_mistress_placeHolder": "Selecciona a quién quieres visitar...",
-  "role_mistress_description": "¡%Tú traes amor a este mundo! Y qué es el amor, quién sabe... :beso:\n:fresa: Cada noche visitas a uno de los jugadores. Al día siguiente, este jugador no puede ser votado.\n:trofeo: Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamación: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!% ",
+  "role_mistress_description": "%¡Tú traes amor a este mundo! Y qué es el amor, quién sabe... :kiss:\n:strawberry:  Cada noche visitas a uno de los jugadores. Al día siguiente, este jugador no puede ser votado.\n:trophy:  Ganas con los inocentes si no quedan asesinos en la ciudad. :exclamation: ¡Cuidado: si la mafia es al menos la mitad de todos los jugadores activos, se apoderan de la ciudad y ganan!%",
   "role_check_reply_mafia1": ":skull_crossbones: ",
   "role_check_reply_mafia2": "¡pertenece a la mafia!",
   "role_check_reply_notMafia1": ":negative_squared_cross_mark: ",
