--- a/src/langs/ar.json
+++ b/src/langs/ar.json
@@ -29,7 +29,7 @@
   "game_started_title": "تم بدء اللعبة",
   "game_started_private_yourRole": "دورك",
   "game_started_private_gameInfo": "معلومات اللعبة:",
-  "game_started_private_theme": "السمة",
+  "game_started_private_theme": "السماء",
   "game_started_private_playerCount": "عدد اللاعبين",
   "game_end_error_noAccess": ":man_gesturing_no: عذراً، لا يمكنك إنهاء هذه اللعبة لأنك لست المضيف!",
   "game_end_success_message": "تم إنهاء اللعبة. لكن يمكنك دائماً إنشاء لعبة جديدة!",
@@ -213,13 +213,13 @@
   "role_edit_roleAction_label": "الإجراء",
   "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
   "role_edit_roleSelectable_label": "هل يمكن اختياره ذاتياً؟",
-  "role_edit_roleSelectable_placeHolder": "true | false",
+  "role_edit_roleSelectable_placeHolder": "تشغيل | إيقاف",
   "role_edit_roleDelay_label": "المدة بين الإجراءات",
   "role_edit_roleDelay_placeHolder": "المدة الجديدة بين إجراءات الدور بالأيام",
   "role_edit_roleSpawnFrom_label": "الحد الأدنى لعدد اللاعبين للظهور",
   "role_edit_roleSpawnFrom_placeHolder": "عدد اللاعبين الأدنى الجديد لظهور الدور",
   "role_edit_roleGroupSelection_label": "هل يلعب في مجموعة؟",
-  "role_edit_roleGroupSelection_placeHolder": "true | false",
+  "role_edit_roleGroupSelection_placeHolder": "تشغيل | إيقاف",
   "role_edit_success_message": ":white_check_mark: تم تعديل الدور بنجاح:",
 
   "role_delete_error_noRoles": "ليس لديك أدوار. لكن يمكنك إنشاؤها بسهولة!",
