Tentative fixes connected to the last patch

--- a/src/langs/ar.json
+++ b/src/langs/ar.json
@@ -131,6 +131,7 @@
   "profile_button_custom": "تخصيص",
   "profile_button_news": "إشعارات الأخبار",
 
+
   "premium_title": "بريميوم :money_with_wings:",
   "premium_description": ":zap: قم بإنشاء **أدوار مخصصة** بميزات فريدة، مثل الإجراء، أسلوب اللعب، الوصف والصورة المصغرة!\n:dizzy: قم بإنشاء **شروط نهاية اللعبة المخصصة** لوصف اللعب بأدوارك أو لتغيير الافتراضي!\n:fire: قم بإنشاء **ألعاب مخصصة** بأدوارك وشروطك و **أبهر أصدقاءك**!\n:sparkling_heart: **ادعمنا** في تحسين بوت مافيا، وإضافة ميزات جديدة والمزيد!\nاشترك فقط بـ`$1/الشهر`",
   "premium_howDoIGet_name": ":gem: كيف أحصل على بريميوم؟",
@@ -174,13 +175,13 @@
   "role_create_roleAction_label": "الإجراء",
   "role_create_roleAction_placeHolder": "قتل | شفاء | حجة | تحقق | تحقق كامل | عدم نشاط؛ لمزيد من التفاصيل انظر /help → البرمجة",
   "role_create_roleSelectable_label": "هل يمكن اختياره ذاتيًا؟",
-  "role_create_roleSelectable_placeHolder": "صحيح | خطأ",
+  "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "التأخير بين الإجراءات",
   "role_create_roleDelay_placeHolder": "تأخير بين إجراءات دورك بالأيام",
   "role_create_roleSpawnFrom_label": "الحد الأدنى لعدد اللاعبين للظهور",
   "role_create_roleSpawnFrom_placeHolder": "عدد اللاعبين الأدنى لظهور دورك",
   "role_create_roleGroupSelection_label": "هل يلعب في مجموعة؟",
-  "role_create_roleGroupSelection_placeHolder": "صحيح | خطأ",
+  "role_create_roleGroupSelection_placeHolder": "true | false",
   "role_create_success_message": ":white_check_mark: تم إنشاء الدور بنجاح:",
 
   "role_edit_error_notFound": ":jigsaw: الدور غير موجود! قد يكون تم حذفه.",
@@ -213,13 +214,13 @@
   "role_edit_roleAction_label": "الإجراء",
   "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
   "role_edit_roleSelectable_label": "هل يمكن اختياره ذاتياً؟",
-  "role_edit_roleSelectable_placeHolder": "تشغيل | إيقاف",
+  "role_edit_roleSelectable_placeHolder": "true | false",
   "role_edit_roleDelay_label": "المدة بين الإجراءات",
   "role_edit_roleDelay_placeHolder": "المدة الجديدة بين إجراءات الدور بالأيام",
   "role_edit_roleSpawnFrom_label": "الحد الأدنى لعدد اللاعبين للظهور",
   "role_edit_roleSpawnFrom_placeHolder": "عدد اللاعبين الأدنى الجديد لظهور الدور",
   "role_edit_roleGroupSelection_label": "هل يلعب في مجموعة؟",
-  "role_edit_roleGroupSelection_placeHolder": "تشغيل | إيقاف",
+  "role_edit_roleGroupSelection_placeHolder": "true | false",
   "role_edit_success_message": ":white_check_mark: تم تعديل الدور بنجاح:",
 
   "role_delete_error_noRoles": "ليس لديك أدوار. لكن يمكنك إنشاؤها بسهولة!",
