--- a/src/langs/fu.json
+++ b/src/langs/fu.json
@@ -19,9 +19,9 @@
   "game_created_button_edit": "ㅤЗмінити обрядиㅤ",
   "game_created_button_new": "Заснувати нову гру",
   "game_cancel_error_noAccess": ":man_gesturing_no: Ви не отаман, ідіть нахуй!",
-  "game_cancel_success_message_aboveEmbed": "Гру скасовано отаманом. Але ви можете стати новим! :smirk:!",
+  "game_cancel_success_message_aboveEmbed": "Гру скасовано отаманом. Але ви можете стати новим!",
   "game_cancel_success_message": "Гру анігільовано. Заснуйте іншу!",
-  "game_autocancel_message": "Гру автоматично анігільовано.",
+  "game_autocancel_message": "Гру автоматично анігільовано. Але ви можете заснувати іншу!",
   "game_start_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете роз'їбати цю гру байрактарами, бо не отаман!",
   "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Недостатньо бандеренят для початку різанини!",
   "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостатньо подоб для початку різанини!",
@@ -74,7 +74,7 @@
   "role_peaceful_description": "%Ваша мета — захистити Січ від москалів!\n:scales:  Розкрийте особи москалів і депортуйте їх до Рососії.\n:trophy:  Козаки перемагають, якщо на Січі не залишається москаликів. :exclamation: Будьте обережні: якщо москалі складатимуть хоча б половину живих козаків, вони захоплять Січ та виграють!%",
   "role_mafia_name": "Москаль",
   "role_mafia_placeHolder": "Оберіть хохленя...",
-  "role_mafia_description": "%РІЖТЕ ХОХЛІВ, ВИ Ж ТАК ПРО ЦЕ МРІЯЛИ!\n:skull_crossbones:  Щоночі москалі знищують одне хохленя, яке обирає більшість (у разі рівної кількості голосів хохленя обирається випадко). Але пам'ятайте: свинку може вилікувати єврей.\n:trophy:  Ви перемагаєте, якщо складаєте не менше половини всіх живих ПАНАЄХАВШИХ та ісконних росіян на Січі.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє росіян — звичайний москаль та В.В.Путін(Хуйло) — перемагає Хуйло.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами у спецпідрозділі: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%РІЖТЕ ХОХЛІВ, ВИ Ж ТАК ПРО ЦЕ МРІЯЛИ!\n:skull_crossbones:  Щоночі москалі знищують одне хохленя, яке обирає більшість (у разі рівної кількості голосів хохленя обирається випадково). Але пам'ятайте: свинку може вилікувати єврей.\n:trophy:  Ви перемагаєте, якщо складаєте не менше половини всіх живих ПАНАЄХАВШИХ та ісконних росіян на Січі.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє росіян — звичайний москаль та В.В.Путін(Хуйло) — перемагає Хуйло.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами у спецпідрозділі: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "В.В.Путін(Хуйло)",
   "role_killer_placeHolder": "Оберіть хохленя...",
   "role_killer_description": "%ДОДАЙТЕ СІЧ ДО ІСКОННИХ ЗЕМЕЛЬ РОСОСІЇ!\n:axe:  Раз на дві ночі ви вбиваєте будь-яку САПУТСТВУЮЩУЮ ПАТЄРЮ. Але пам'ятайте: ПАТЄРЮ може вилікувати ЖИДЯРА ЯКИЙ КОНТРОЛИРУЄТ МИРОВЬіЄ ФІНАНСИ.\n:trophy:  Ви приєднуєте Січ, якщо крім вас на Січі залишається не більше однієї ПАТЄРІ. Пожалійте хоч когось, щоб не застрелитися від нудьги!%",
@@ -302,7 +302,7 @@
   "help_about_value_developers": "\n`Розробка:` ",
   "help_about_value_text": "\n`Тексти:` ",
   "help_about_value_localization": "\n`Локалізація:` ",
-  "help_about_value_arts": "`Арти:` ",
+  "help_about_value_arts": "\n`Арти:` ",
 
   "help_button_rules": "Правила гри",
   "help_button_scripting": "Створення скриптиків",
