--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -74,7 +74,7 @@
   "role_peaceful_description": "%Ваша мета — захистити місто від злочинців!\n:scales:  Розкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\n:trophy:  Мирні перемагають, якщо в місті не залишається вбивць. :exclamation: Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones:  Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами в команді: % + %{oPlayersTRole}% : %%)",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ!\n:skull_crossbones:  Щоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадково). Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Мафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  З вами в команді: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Маніяк",
   "role_killer_placeHolder": "Оберіть жертву...",
   "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ!\n:axe:  Раз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\n:trophy:  Ви перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
@@ -302,7 +302,7 @@
   "help_about_value_developers": "\n`Розробка:` ",
   "help_about_value_text": "\n`Тексти:` ",
   "help_about_value_localization": "\n`Локалізація:` ",
-  "help_about_value_arts": "`Арти:` ",
+  "help_about_value_arts": "\n`Арти:` ",
 
   "help_button_rules": "Правила гри",
   "help_button_scripting": "Створення скриптів",
